--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,14 @@ button {
         width: 60%;
     }
 
+    /* Portfolio */
+    .flex {
+        justify-content: space-between;
+    }
+    figure {
+        width: 45%;
+        margin-right: 0;
+    }
 }
 @media screen and (max-width: 768px) {
 
@@ -199,4 +207,7 @@ button {
         text-align: center;
     }
     
+    figure {
+        width: 100%;
+    }
 }
