--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    transition: ease width 1s;
 }
 body {
     background: #ddd url("../images/strange_bullseyes.png") repeat center;
